prepare for api create patient profile, add auth middleware, setup module patient
